[gd_scene load_steps=20 format=3 uid="uid://byfqd3ldkyqvh"]

[ext_resource type="Script" path="res://Scenes/Players/Max´s/MaxPlayerScript.gd" id="1_s5sgb"]
[ext_resource type="Script" path="res://Scenes/Players/Max´s/areaDeAtaqueScript.gd" id="3_lhv1y"]
[ext_resource type="Texture2D" uid="uid://bjn7lv4g8vc8g" path="res://Scenes/Players/Max´s/maxSpritesWalk.png" id="3_pki1l"]

[sub_resource type="Animation" id="Animation_bq41j"]
resource_name = "Abajo"
length = 0.33
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_3p2yp"]
resource_name = "AbajoDerecha"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_0cmif"]
resource_name = "AbajoIzquierda"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_quvrh"]
resource_name = "Arriba"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_1n2hn"]
resource_name = "ArribaDerecha"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_ylflw"]
resource_name = "ArribaIzquierda"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_np2vd"]
resource_name = "Derecha"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_h18di"]
resource_name = "Izquierda"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_r6np0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2iqoq"]
resource_name = "Dash"
length = 0.20001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jidiy"]
_data = {
"Abajo": SubResource("Animation_bq41j"),
"AbajoDerecha": SubResource("Animation_3p2yp"),
"AbajoIzquierda": SubResource("Animation_0cmif"),
"Arriba": SubResource("Animation_quvrh"),
"ArribaDerecha": SubResource("Animation_1n2hn"),
"ArribaIzquierda": SubResource("Animation_ylflw"),
"Dash": SubResource("Animation_2iqoq"),
"Derecha": SubResource("Animation_np2vd"),
"Izquierda": SubResource("Animation_h18di"),
"RESET": SubResource("Animation_r6np0")
}

[sub_resource type="Animation" id="Animation_5886c"]
resource_name = "dash"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.501961, 0.501961, 0.501961, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gmy81"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_li1v0"]
_data = {
"RESET": SubResource("Animation_gmy81"),
"dash": SubResource("Animation_5886c")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpmcn"]
size = Vector2(35, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty0mc"]
size = Vector2(50, 70)

[node name="MaxPlayer" type="CharacterBody2D"]
script = ExtResource("1_s5sgb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.01328e-06, 0.499999)
scale = Vector2(5, 6.125)
texture = ExtResource("3_pki1l")
hframes = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.6
libraries = {
"": SubResource("AnimationLibrary_jidiy")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_li1v0")
}

[node name="areaDeAtaque" type="Area2D" parent="."]
visible = false
scale = Vector2(1, 1)
script = ExtResource("3_lhv1y")

[node name="colisionDeAtaque" type="CollisionShape2D" parent="areaDeAtaque"]
position = Vector2(62.5, -2.98023e-06)
shape = SubResource("RectangleShape2D_wpmcn")
debug_color = Color(0.631373, 0, 0.0627451, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.68221e-06, 5)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_ty0mc")

[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_animation_player_2_animation_finished"]
